# segway-private

./: .gitignore  README  SLAM.txt
config/: rviz_nav.rviz  rviz_sensors.rviz
frames/: frames_2025-08-21_18.43.22.gv  frames_2025-08-21_18.49.50.gv  frames_2025-08-21_18.50.49.gv  frames_2025-08-23_15.14.03.gv  frames_2025-08-23_19.24.57.gv  frames_2025-08-23_19.30.06.gv  frames_2025-08-24_14.48.43.gv  frames_2025-08-24_14.49.04.gv  frames_2025-08-24_15.06.10.gv  frames_2025-08-24_15.15.58.gv  frames_2025-08-24_15.16.31.gv  frames_2025-08-25_11.35.00.gv  frames_2025-08-25_11.46.49.gv  frames_2025-08-25_11.50.14.gv  frames_2025-08-25_11.51.53.gv  frames_2025-08-25_11.57.14.gv  frames_2025-08-25_11.58.30.gv  frames_2025-08-25_11.59.18.gv  frames_2025-12-03_11.24.48.gv
src/cmd_vel_tools/: package.xml  setup.cfg  setup.py
src/cmd_vel_tools/cmd_vel_tools/: throttle_node.py
src/livox_ros_driver2/: CMakeLists.txt
src/livox_ros_driver2/config/: MID360_config.json
src/livox_ros_driver2/launch_ROS2/: MID360_launch.py
src/pointcloud_to_laserscan/launch/: livox_pointcloud_to_laserscan_launch.py
src/rl_planner/: package.xml  setup.py
src/rl_planner/launch/: navigation_launch.py
src/rl_planner/rl_planner/: rl_planner_node.py
src/rl_planner/rl_planner/config/: planner_config.yaml
src/rl_planner/rl_planner/rl_nav2_config/: nav2_global_config.yaml
src/rl_planner/rl_planner/rlgames_runner/: README_rlgames_eval_policy.md  rlgames_eval_policy.py  running_mean_std.py
src/rl_planner/rl_planner/rlgames_runner/.ipynb_checkpoints/: RLGames_Run_GYM_Example-checkpoint.ipynb  run_policy-checkpoint.ipynb
src/rl_planner/rl_planner/rlgames_runner/checkpoint/: last_SocialNavHumanPoseMORL_ep_100_rew_208.35953.pth  last_SocialNavHumanPoseMORL_ep_450_rew_446.22223.pth
src/rl_planner/rl_planner/rlgames_runner/rlnetwork/: socialnav_humanpose.py
src/segway_msgs/: CMakeLists.txt  package.xml  ros2_file_name_change.py
src/segway_msgs/srv/: RosGetChassisSnCmd.srv  RosGetHostAndChassisMatchCmd.srv  RosGetRotateFunctionCfgCmd.srv  RosGetSwVersionCmd.srv  RosSetCfgRotateFunctionCmd.srv  RosSetChassisBuzzerCmd.srv
src/segway_nav/: package.xml  setup.cfg  setup.py
src/segway_nav/launch/: bringup_launch.py
src/segway_nav/params/: nav2_params (copy).yaml  nav2_params_mppi.yaml  nav2_params_mppi_latest.yaml  nav2_params_pathfollowerr.yaml
src/segway_slam_toolbox/: package.xml  setup.cfg  setup.py
src/segway_slam_toolbox/config/: mapper_params_localization.yaml  mapper_params_online_async.yaml  mapper_params_online_sync.yaml
src/segway_slam_toolbox/launch/: localization_launch.py  slam_async_launch.py  slam_sync_launch.py
src/segway_slam_toolbox/maps/: GLC_G.pgm  GLC_G.yaml
src/segway_slam_toolbox/maps_old/: GLC_G.pgm  GLC_G.yaml  lab_map.data  lab_map.pgm  lab_map.yaml
src/segwayrmp/: CMakeLists.txt  package.xml
src/segwayrmp/include/: Ge_encoder_odometry.h  comm_ctrl_navigation.h
src/segwayrmp/include/segwayrmp/: Odoemtry.h  robot.h
src/segwayrmp/launch/: chassis_response_test.launch.py  robot_pose_ekf.launch.py  segway.launch.py  segway_bringup.launch.py
src/segwayrmp/lib/: ctrl_arm64-v8a  ctrl_x86_64
src/segwayrmp/src/: Ge_encoder_odometry.cpp  SmartCar.cpp  robot.cpp
src/segwayrmp/tools/: ChassisResponseTest.cpp  drive_segway_sample.cpp
src/segwayrmp_description/: CMakeLists.txt  package.xml  urdf.rviz
src/segwayrmp_description/config/: joint_names_segway_e1_description.yaml
src/segwayrmp_description/launch/: display.launch.py  gazebo.launch.py  state_publisher.launch.py  state_publisher_w_joint.launch.py
src/segwayrmp_description/meshes/: Box.STL  Box_door.STL  Box_door_Hall_sensor.STL  Box_door_linkage1.STL  Box_door_linkage2.STL  Box_door_linkage3.STL  Camera_in_box.STL  Chassis_body.STL  Chassis_front_beam.STL  Front_case_wide_angle_camera.STL  Front_housing_GPS.STL  Front_housing_ultrasonic_sensor1.STL  Front_housing_ultrasonic_sensor2.STL  Front_housing_ultrasonic_sensor3.STL  Front_shell_depth_camera.STL  Front_shell_lidar.STL  Front_shell_millimeter_wave_radar.STL  Jetson_top_only.stl  Jetson_top_only_w_extended_leg.stl  Left_wide_angle_camera.STL  Rear_case_wide_angle_camera.STL  Rear_compartment_shell.STL  Rear_housing_ultrasonic_sensor1.STL  Rear_housing_ultrasonic_sensor2.STL  Rear_housing_ultrasonic_sensor3.STL  Right_wide_angle_camera.STL  segway_top_plate.stl
src/segwayrmp_description/urdf/: segway_e1 (copy).urdf  segway_e1.csv  segway_e1.urdf
src/zed-ros2-wrapper/zed_wrapper/launch/: zed_camera.launch.py
