<?xml version="1.0"?>
<package format="3">
  <name>segway_msgs</name>
  <version>0.0.0</version>
  <description>The segway_msgs package</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- For generating messages, services, and actions -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Action files support -->
  <build_depend>action_msgs</build_depend>
  <exec_depend>action_msgs</exec_depend>

  <!-- Standard message types (add only if used in your .msg/.srv/.action files) -->
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <build_depend>nav_msgs</build_depend>
  <exec_depend>nav_msgs</exec_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- If you use these in your custom messages/services/actions, include them. 
       Otherwise, remove. -->
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <export>
  </export>
</package>
